--- a/public/stylesheets/scss/application.scss
+++ b/public/stylesheets/scss/application.scss
@@ -18,6 +18,7 @@
 @import "components/images";
 @import "components/buttons";
 @import "components/cards";
+@import "components/lightbox";
 
 @import "base/icons";
 
@@ -26,4 +27,4 @@
 
 // put these at bottom for speed.
 @import "layout/twitter";
-@import "layout/flickr"; 
+@import "layout/photos"; 
