--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,83 +1,86 @@
 {{#each showcase}}
 <section id="showcase-cpd">
-
-	<h2 class="section-title">Recent Work Showcase</h2>
-	
 	<div class="container">
-		<div class="browsers">
-		  <div class="browser">
-		    <div class="browser-top-bar">
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		    </div>
-		  <div class="browser-content"></div>
-		  </div>
-		  <div class="browser">
-		    <div class="browser-top-bar">
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		    </div>
-		    <div class="browser-content">
-		    </div>
-		  </div>
-		  <div class = "browser">
-		    <div class="browser-top-bar">
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		      <div class="browser-circle"></div>
-		    </div>
-		    <div class="browser-content"></div>
-		  </div>
-		</div>
-		<div class="cover"></div>		
-	</div>
+		<h2 class="section-title">Recent Work Showcase</h2>
 	
-	<div class="details">
-		<aside>
-			<h4>{{title}}</h4>
-			{{{marked intro}}}
-		</aside>
-		<article>
-			<h4>Project</h4>
-			{{{marked project}}}
+		<div class="container">
+			<div class="browsers">
+			  <div class="browser">
+			    <div class="browser-top-bar">
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			    </div>
+			  <div class="browser-content"></div>
+			  </div>
+			  <div class="browser">
+			    <div class="browser-top-bar">
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			    </div>
+			    <div class="browser-content">
+			    </div>
+			  </div>
+			  <div class = "browser">
+			    <div class="browser-top-bar">
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			      <div class="browser-circle"></div>
+			    </div>
+			    <div class="browser-content"></div>
+			  </div>
+			</div>
+			<div class="cover"></div>		
+		</div>
+	
+		<div class="details">
+			<aside>
+				<h4>{{title}}</h4>
+				{{{marked intro}}}
+			</aside>
+			<article>
+				<h4>Project</h4>
+				{{{marked project}}}
 
-			<h4>Role</h4>
-			{{{marked role}}}
+				<h4>Role</h4>
+				{{{marked role}}}
 
-			<h4>Technologies</h4>
-			{{{marked tech}}}
+				<h4>Technologies</h4>
+				{{{marked tech}}}
 
-			<p>Watch here for the "how I did it" post.</p>
-		</article>
+				<p>Watch here for the "how I did it" post.</p>
+			</article>
+		</div>
 	</div>
 </section>
 {{/each}}
 
 {{#if projects}}
 <section id="showcase-smaller">
-	<h2 class="section-title">Other Works</h2>
+	<div class="container">
+		<h2 class="section-title">Other Works</h2>
 
-	<div class="cards">
-		{{#each projects}}
-			<!-- START CPD API CARD -->
-			<div class="card">
+		<div class="cards">
+			{{#each projects}}
+				<!-- START CPD API CARD -->
+				<div class="card">
 			
-				<div class="card-image">
-					<a href="{{link}}" target="_blank"><img src="{{imgurl}}" alt="{{imgalt}}"></a>
-				</div>
-				<div class="card-header">
-					{{title}}
-				</div>
-				<div class="card-copy">
-					{{{marked description}}}
+					<div class="card-image">
+						<a href="{{link}}" target="_blank"><img src="{{imgurl}}" alt="{{imgalt}}"></a>
+					</div>
+					<div class="card-header">
+						{{title}}
+					</div>
+					<div class="card-copy">
+						{{{marked description}}}
 				
-					<p><a href="{{linkurl}}" target="_blank" class="button">{{linktext}}</a> </p>
+						<p><a href="{{linkurl}}" target="_blank" class="button">{{linktext}}</a> </p>
+					</div>
 				</div>
-			</div>
-			<!-- END CPD API CARD -->
-		{{/each}}
+				<!-- END CPD API CARD -->
+			{{/each}}
+		</div>
 	</div>
 </section>
 {{/if}}
@@ -98,16 +101,25 @@
 {{/if}}
 
 {{#if photos}}
-	<section id="flickr">
+	<section id="photos">
 	
 		<div class="content">
-			<h2 class="section-title">Photography: <a href="http://photo.jiggins.ca">View Portfolio</a></h2>
-			<div class="flickr-stream">
-				{{#each photos}}
-					<a href="" class="thumbnail col-xs-1" target="_blank">
-						<img src="{{image_url}}" alt="" class="img-responsive" />
-					</a>
-				{{/each}}
+			<h2 class="section-title">Photography</h2>
+			<p class="section-title-link"><a href="http://photo.jiggins.ca" target="_blank">Full Portfolio &rarr;</a></p>
+			<div class="photo-stream">
+				<ul class="photos">
+					{{#each photos}}
+						<li>
+							<img
+								srcset="{{img_200}}  440w, 
+								{{img_200}}  200w"
+								src="{{img_200}}"
+								alt="{{name}}"
+								class="img-fit"
+								data-jslghtbx="{{img_1600}}">
+						</li>
+					{{/each}}
+				</ul>
 			</div>
 		</div>
 	</section>
