--- a/public/stylesheets/css/application.css
+++ b/public/stylesheets/css/application.css
@@ -99,6 +99,12 @@ h2.section-title {
   text-transform: uppercase;
   margin-bottom: 20px; }
 
+.section-title-link {
+  font-size: .8em;
+  font-weight: 500;
+  text-align: center;
+  margin: -10px 0 10px 0; }
+
 h3 {
   font-size: 33.25px; }
   h3 small {
@@ -434,6 +440,229 @@ nav.home {
     .card:active .card-header {
       background-color: #f7f7f7; }
 
+/**
+*   VARS
+**/
+/* IE8 Stuff */
+.jslghtbx-ie8.jslghtbx {
+  background-image: url("../img/trans-bck.png");
+  display: none; }
+  .jslghtbx-ie8.jslghtbx.jslghtbx-active {
+    display: block; }
+  .jslghtbx-ie8.jslghtbx .jslghtbx-contentwrapper > img {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    display: block; }
+  .jslghtbx-ie8.jslghtbx .jslghtbx-contentwrapper.jslghtbx-wrapper-active > img {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; }
+
+/* Main wrapper */
+.jslghtbx {
+  font-family: sans-serif;
+  overflow: auto;
+  visibility: hidden;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent; }
+  .jslghtbx.jslghtbx-active {
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.85); }
+
+/* loading-animation */
+.jslghtbx-loading-animation {
+  margin-top: -60px;
+  margin-left: -60px;
+  width: 120px;
+  height: 120px;
+  top: 50%;
+  left: 50%;
+  display: none;
+  position: absolute;
+  z-index: -1; }
+  .jslghtbx-loading-animation > span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    margin: 5px;
+    background-color: #fff;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out; }
+    .jslghtbx-loading-animation > span.jslghtbx-active {
+      margin-bottom: 60px; }
+
+.jslghtbx.jslghtbx-loading .jslghtbx-loading-animation {
+  display: block; }
+
+.jslghtbx-nooverflow {
+  overflow: hidden !important; }
+
+.jslghtbx-contentwrapper {
+  margin: auto;
+  visibility: hidden; }
+  .jslghtbx-contentwrapper > img {
+    background: #fff;
+    padding: .5em;
+    display: none;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0; }
+
+.jslghtbx-contentwrapper.jslghtbx-wrapper-active {
+  visibility: visible; }
+  .jslghtbx-contentwrapper.jslghtbx-wrapper-active > img {
+    display: block;
+    opacity: 1; }
+
+/* Caption */
+.jslghtbx-caption {
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  max-width: 450px;
+  color: #fff;
+  text-align: center;
+  font-size: .9em; }
+
+.jslghtbx-active .jslghtbx-caption {
+  display: block; }
+
+/* Animation Stuff */
+.jslghtbx-contentwrapper.jslghtbx-animate > img {
+  opacity: 0; }
+
+.jslghtbx-contentwrapper > img.jslghtbx-animate-transition {
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  -ms-transition: opacity 0.2s ease-in-out; }
+
+.jslghtbx-contentwrapper > img.jslghtbx-animating-next {
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; }
+
+.jslghtbx-contentwrapper > img.jslghtbx-animating-prev {
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; }
+
+.jslghtbx-contentwrapper > img.jslghtbx-animate-init {
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; }
+
+.jslghtbx-contentwrapper > img.jslghtbx-animate-transition {
+  cursor: pointer; }
+
+/* Controls */
+.jslghtbx-close {
+  position: fixed;
+  right: 23px;
+  top: 23px;
+  margin-top: -4px;
+  font-size: 2em;
+  color: #FFFFFF;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out; }
+  .jslghtbx-close:hover {
+    text-shadow: 0 0 10px #fff; }
+  @media screen and (max-width: 1060px) {
+    .jslghtbx-close {
+      font-size: 1.5em; } }
+
+.jslghtbx-next,
+.jslghtbx-prev {
+  display: none;
+  position: fixed;
+  top: 50%;
+  max-width: 6%;
+  max-height: 250px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out; }
+  .jslghtbx-next.jslghtbx-active,
+  .jslghtbx-prev.jslghtbx-active {
+    display: block; }
+  .jslghtbx-next > img,
+  .jslghtbx-prev > img {
+    width: 100%; }
+
+.jslghtbx-next {
+  right: .6em; }
+  .jslghtbx-next.jslghtbx-no-img:hover {
+    border-left-color: #787878; }
+  @media screen and (min-width: 451px) {
+    .jslghtbx-next {
+      right: .6em; }
+      .jslghtbx-next.jslghtbx-no-img {
+        border-top: 110px solid transparent;
+        border-bottom: 110px solid transparent;
+        border-left: 40px solid #FFF; } }
+  @media screen and (max-width: 600px) {
+    .jslghtbx-next.jslghtbx-no-img {
+      right: 5px;
+      padding-left: 0;
+      border-top: 60px solid transparent;
+      border-bottom: 60px solid transparent;
+      border-left: 15px solid #FFF; } }
+  @media screen and (max-width: 450px) {
+    .jslghtbx-next {
+      right: .2em;
+      padding-left: 20px; } }
+
+.jslghtbx-prev {
+  left: .6em; }
+  .jslghtbx-prev.jslghtbx-no-img:hover {
+    border-right-color: #787878; }
+  @media screen and (min-width: 451px) {
+    .jslghtbx-prev {
+      left: .6em; }
+      .jslghtbx-prev.jslghtbx-no-img {
+        border-top: 110px solid transparent;
+        border-bottom: 110px solid transparent;
+        border-right: 40px solid #FFF; } }
+  @media screen and (max-width: 600px) {
+    .jslghtbx-prev.jslghtbx-no-img {
+      left: 5px;
+      padding-right: 0;
+      border-top: 60px solid transparent;
+      border-bottom: 60px solid transparent;
+      border-right: 15px solid #FFF; } }
+  @media screen and (max-width: 450px) {
+    .jslghtbx-prev {
+      left: .2em;
+      padding-right: 20px; } }
+
+.jslghtbx-thmb {
+  padding: 2px;
+  max-width: 100%;
+  max-height: 140px;
+  cursor: pointer;
+  box-shadow: 0px 0px 3px 0px #000;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out; }
+  @media screen and (min-width: 451px) {
+    .jslghtbx-thmb {
+      margin: 1em; } }
+  @media screen and (max-width: 450px) {
+    .jslghtbx-thmb {
+      margin: 1em 0; } }
+  .jslghtbx-thmb:hover {
+    box-shadow: 0px 0px 14px 0px #000; }
+
 @font-face {
   font-family: 'icomoon';
   src: url("../../fonts/icomoon.eot?v7h1qi");
@@ -675,21 +904,60 @@ nav.home {
     border-radius: 0;
     margin: 0 18px; }
 
-#flickr {
-  margin-top: 20px;
-  padding: 0px; }
-  #flickr .flickr-stream .flickr-photo {
-    margin: 0px;
-    padding: 0px;
-    float: left;
-    width: 25%; }
-    @media screen and (min-width: 767px) {
-      #flickr .flickr-stream .flickr-photo {
-        width: 20%; } }
-    @media screen and (min-width: 1400px) {
-      #flickr .flickr-stream .flickr-photo {
-        width: 10%; } }
-    #flickr .flickr-stream .flickr-photo:hover {
-      -webkit-filter: sepia(1); }
-  #flickr a > img {
-    border: 0; }
+ul.photos {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  -webkit-box-align: stretch;
+  -moz-box-align: stretch;
+  box-align: stretch;
+  -webkit-align-items: stretch;
+  -moz-align-items: stretch;
+  -ms-align-items: stretch;
+  -o-align-items: stretch;
+  align-items: stretch;
+  -ms-flex-align: stretch;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-direction: row;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: distribute;
+  -moz-box-pack: distribute;
+  box-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
+  -ms-justify-content: space-around;
+  -o-justify-content: space-around;
+  justify-content: space-around;
+  -ms-flex-pack: distribute; }
+
+ul.photos li {
+  margin: 0;
+  padding: 0;
+  width: 25%; }
+  @media screen and (min-width: 767px) {
+    ul.photos li {
+      width: 10%; } }
+  @media screen and (min-width: 1400px) {
+    ul.photos li {
+      width: 10%; } }
