--- a/public/stylesheets/scss/base/_type.scss
+++ b/public/stylesheets/scss/base/_type.scss
@@ -97,6 +97,14 @@ h2.section-title {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
+.section-title-link {
+    font-size: .8em;
+    font-weight: 500;
+    text-align: center;
+    //text-transform: uppercase;
+    margin: -10px 0 10px 0;
+	
+}
 
 h3 {
   font-size: $h3-font-size;
